// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing DependsOnMethod should throw an error if the endpoint does not have the corresponding method 1`] = `
"The endpoint assigned to the 'post' parameter must have at least this method in its specification.
This error should prevent mistakes during the development process.
Example:

new DependsOnMethod({
  post: endpointsFactory.build({
    methods: ['post', 'get', 'patch']
    // or method: 'post'
    ...
  })
});
"
`;

exports[`Routing initRouting() Should throw an error in case of slashes in route 1`] = `
"Routing elements should not contain '/' character.
The error caused by '/v1' route that has a 'user/retrieve' entry."
`;

exports[`Routing initRouting() Should throw an error in case of slashes in route 2`] = `
"Routing elements should not contain '/' character.
The error caused by 'v1/user/retrieve' entry."
`;
